[tool.poetry]
name = "ollama-rag"
version = "0.1.0"
description = ""
authors = ["Marc F. Mezger <marc.mezger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultra-simple-config = "^0.1.0"
llama-index = "^0.9.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
