[tool.poetry]
name = "ollama-rag"
version = "0.1.0"
description = ""
authors = ["Marc F. Mezger <marc.mezger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultra-simple-config = "^0.1.0"
llama-index = "^0.9.34"
weaviate-client = "^4.4.1"
ollama = {git = "https://github.com/ej52/ollama-python"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
